# Fix-a-Fork-36

./: CMakeLists.txt  Fix-a-Fork.p.r  README.md  build.bash  file_ext.c  file_ext.h  main.c  main.h  readme.txt  scratch.c
build-ppc/: %fix-a-fork-carbon.ad  CMakeCache.txt  Makefile  cmake_install.cmake  fix-a-fork-carbon.dsk  fix-a-fork-carbon.pef  fix-a-fork-carbon.xcoff
